force-app/main/default/objects/Opportunity/fields/Employee_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Employee_Mileage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Mileage</label>
    <referenceTo>Employee_Mileage__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunity_to_Mileage</relationshipName>
    <type>Lookup</type>
</CustomField>