force-app/main/default/objects/Opportunity/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Name</label>
    <referenceTo>Employee_Information__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>