force-app/main/default/objects/Opportunity/fields/Implemented_and_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Implemented_and_Start_Date__c</fullName>
    <description>Date that program was implemented.</description>
    <inlineHelpText>Date that program was implemented.</inlineHelpText>
    <label>Implemented and Start Date</label>
    <type>Date</type>
</CustomField>